crates/pixi_manifest/src/snapshots/pixi_manifest__pyproject__tests__remove_pypi_dependency.snap
---
source: crates/pixi_manifest/src/pyproject.rs
expression: manifest.document.to_string()
---
        [project]
        name = "flask-hello-world-pyproject"
        version = "0.1.0"
        description = "Example how to get started with flask in a pixi environment."
        license = "MIT OR Apache-2.0"
        homepage = "https://github.com/prefix/pixi"
        readme = "README.md"
        requires-python = ">=3.11"

        [tool.pixi.project]
        channels = ["conda-forge"]
        platforms = ["linux-64"]

        [tool.pixi.tasks]
        start = "python -m flask run --port=5050"
